Drastically reduce mobile navbar size and add 'block' class to fix Home/About visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 
   @media (max-width: 768px) {
     html {
-      scroll-padding-top: 65px;
+      scroll-padding-top: 50px;
     }
   }
   
@@ -39,7 +39,7 @@
 
   @media (max-width: 768px) {
     section {
-      scroll-margin-top: 65px;
+      scroll-margin-top: 50px;
     }
   }
 
